# JABES-VPMM

./: LICENSE  README.md  pyproject.toml
examples/: simulated_example.md  simulated_example.qmd
src/vpmm/: bmpriors.py  conn.py  covarfun.py  model.py  quantgen_simple.py  stegle.py
tests/: test_stegle.py
