
[project]
name = "vpmm"
description = "Examplery code for the VPMM published in JABES."
authors = [
    {name = "wiep", email = "wiep@users.noreply.github.com"},
    {name = "isammarques", email = "isammarques@users.noreply.github.com"},
]
dynamic = ["version"]
dependencies = [
    "liesel==0.1.2",
    "blackjax==0.8.2", # blackjax had a breaking change
    "jax",
    "jaxlib",
    "scipy",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "src/vpmm/__init__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "mypy>=1.3.0",
    "pre-commit>=3.3.2",
]

[tool.isort]
profile = "black"
py_version = 310

[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true
scripts_are_modules = true
